--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,19 @@
 @import 'meyer-reset.css';
+
+img {
+    display: flexa;
+}
+  
+main {
+    display: flex;
+    flex-direction: column;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+}
+  
+body {
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+}
